first implementation of segway

--- a/ownSegway/Makefile
+++ b/ownSegway/Makefile
@@ -1,7 +1,7 @@
-TARGET = LineFollower
+TARGET = Segway
 TARGET_SOURCES := \
-	linefollower.c
-TOPPERS_OSEK_OIL_SOURCE := ./linefollower.oil
+	segway.c
+TOPPERS_OSEK_OIL_SOURCE := ./segway.oil
 
 O_PATH ?= build
 
